--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FinanceTracker Pro - Manajemen Keuangan</title>
+    <title>MONEYKU - Manajemen Keuangan</title>
     <style>
         * {
             margin: 0;
@@ -281,7 +281,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>💰 FinanceTracker Pro</h1>
+            <h1>MONEYKU</h1>
             <p class="subtitle">Kelola Keuangan Anda dengan Mudah & Efisien</p>
         </header>
 
@@ -327,13 +327,13 @@
                 <div class="form-group">
                     <label>Kategori:</label>
                     <select id="expenseCategory">
-                        <option value="makanan">🍔 Makanan</option>
-                        <option value="transportasi">🚗 Transportasi</option>
-                        <option value="belanja">🛍 Belanja</option>
-                        <option value="hiburan">🎮 Hiburan</option>
-                        <option value="kesehatan">🏥 Kesehatan</option>
-                        <option value="pendidikan">📚 Pendidikan</option>
-                        <option value="lainnya">📝 Lainnya</option>
+                        <option value="makanan"> Makanan</option>
+                        <option value="transportasi"> Transportasi</option>
+                        <option value="belanja"> Belanja</option>
+                        <option value="hiburan"> Hiburan</option>
+                        <option value="kesehatan"> Kesehatan</option>
+                        <option value="pendidikan"> Pendidikan</option>
+                        <option value="lainnya"> Lainnya</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -352,7 +352,7 @@
             </div>
 
             <div class="card">
-                <h3>🎯 Kalkulator Tabungan</h3>
+                <h3> Kalkulator Tabungan</h3>
                 <div class="form-group">
                     <label>Target Tabungan:</label>
                     <input type="number" id="savingsTarget" placeholder="Target dalam Rupiah">
@@ -371,14 +371,14 @@
         </div>
 
         <div class="transaction-list">
-            <h3>📋 Riwayat Transaksi</h3>
+            <h3> Riwayat Transaksi</h3>
             <div id="transactionHistory">
                 <p style="text-align: center; color: #666; padding: 20px;">Belum ada transaksi</p>
             </div>
         </div>
 
         <div class="whatsapp-section">
-            <h3>📱 Akses via WhatsApp</h3>
+            <h3> Akses via WhatsApp</h3>
             <p>Kelola keuangan Anda langsung dari WhatsApp!</p>
             <a href="https://wa.me/6281234567890?text=Halo%20FinanceTracker%20Pro!%20Saya%20ingin%20menggunakan%20layanan%20manajemen%20keuangan%20via%20WhatsApp" class="whatsapp-btn" target="_blank">
                 💬 Chat via WhatsApp
